--- a/ProyectoDSParteI_Camila_Iturry_ipynb.ipynb
+++ b/ProyectoDSParteI_Camila_Iturry_ipynb.ipynb
@@ -3721,7 +3721,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Visualizaciones Exploratorias Generales**"
+        "# **2- Visualizaciones Exploratorias Generales**"
       ],
       "metadata": {
         "id": "Q9vFgElnF5MH"
@@ -4267,7 +4267,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Visualizaciones Comparativas Más Específicas**\n",
+        "# **3- Visualizaciones Comparativas Más Específicas**\n",
         "\n",
         "Objetivo: ***Buscar relaciones o patrones entre variables.***\n"
       ],
@@ -4644,7 +4644,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Visualizaciones de Calidad de Datos o Análisis Extra**\n",
+        "# **4- Visualizaciones de Calidad de Datos o Análisis Extra**\n",
         "\n",
         "Objetivo: *Mostrar el impacto de tu limpieza de datos y entender mejor los datos categóricos.*\n"
       ],
@@ -4845,7 +4845,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Visualización: Análisis de Alojamiento**"
+        "# **5- Visualización: Análisis de Alojamiento**"
       ],
       "metadata": {
         "id": "FMufToBK5R3y"
@@ -5250,7 +5250,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Insights**\n",
+        "# **6- Insights**\n",
         "\n",
         "En este análisis, hemos explorado el dataset de propiedades en Airbnb con el objetivo de obtener insights clave sobre los precios, la disponibilidad y las características de las propiedades. A través de diversas visualizaciones, hemos examinado la distribución de precios, las variaciones por barrio, la disponibilidad durante todo el año, las reseñas y la relación entre el precio y la disponibilidad.\n",
         "\n",
